<resources>
    <string name="app_name">cuanKu</string>
    <string name="list">List</string>

    <string name="nominal_pengeluaran">Nominal pengeluaran</string>
    <string name="nominal_pemasukan">Nominal pemasukan</string>
    <string name="nominal">Nominal keuangan</string>

    <string name="judul">Judul</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>

    <string name="about">Tentang Kami</string>
    <string name="keluar">Keluar aplikasi</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal">Tanggal</string>
    <string name="btn_update">Update</string>
    <string name="btn_simpan">Simpan</string>
    <string name="btn_hapus">Hapus</string>

    <string name="keterangan_about"> Aplikasi ini merupakan hasil Ujian Akhir Semester mata kuliah Pemrograman Mobile di Universitas Teknokrat Indonesia</string>


<!--    Slider-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Berikutnya</string>
    <string name="skip">Lewati</string>
    <string name="start">Mulai</string>

    <string name="slide_1_title">Terpantau</string>
    <string name="slide_1_desc">Jadi lebih tau yang mana aja yang buat duit jadi boros</string>

    <string name="slide_2_title">Terangkum</string>
    <string name="slide_2_desc">Dapat mengulas dan mereview kembali</string>

    <string name="slide_3_title">Tersimpel</string>
    <string name="slide_3_desc">Mudah dipahami dan tidak sulit untuk digunakan</string>
    <string name="Nominal">nominal</string>
    <string name="kategori">Kategori</string>
</resources>