<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormData"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edt_nominal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/stroke_shape"
        android:drawableStart="@drawable/ic_discount"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/nominal_pemasukan"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/stroke_shape"
        android:drawableStart="@drawable/ic_document"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/judul"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_keterangan"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/stroke_shape_long"
        android:drawableStart="@drawable/ic_more_square"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/keterangan"
        android:inputType="text|textMultiLine"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/stroke_shape"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/tanggal"
        android:inputType="datetime"
        android:padding="10dp"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_marginEnd="24dp">

        <RadioButton
            android:id="@+id/radio_pemasukan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/pemasukan" />

        <RadioButton
            android:id="@+id/radio_pengeluaran"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/pengeluaran" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/rounded_corner_btn"
            android:radius="10dp"
            android:textColor="@color/white"
            android:text="@string/btn_simpan" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_hapus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/stroke_corner_btn"
            android:text="@string/btn_hapus"
            android:textColor="@color/blue" />
    </LinearLayout>
</LinearLayout>